Deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learning
  labels:
    app: caseconv
    app.kubernetes.io/name: caseconv
spec:
  finalizers:
  - kubernetes
---
apiVersion: v1
kind: Service
metadata:
  name: caseconv
  namespace: learning
  labels:
    app: caseconv
    app.kubernetes.io/name: caseconv
spec:
  type: NodePort
  #externalTrafficPolicy: Cluster
  #sessionAffinity: None
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: caseconv       
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caseconv-ingress
  namespace: learning
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: caseconv
    app.kubernetes.io/name: caseconv
spec:
  rules:
  - http:
      paths:
      - path: /caseconv
        backend:
          serviceName: caseconv
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caseconv-deployment
  namespace: learning
  labels:
    app: caseconv
    app.kubernetes.io/name: caseconv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caseconv
  template:
    metadata:
      labels:
        app: caseconv
        app.kubernetes.io/name: caseconv
    spec:
      containers:
      - name: caseconversionapi
        image: simonettidti/caseconversionapi
        imagePullPolicy: Always
        resources: 
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128M
      - name: caseconversionweb
        image: simonettidti/caseconversionweb
        imagePullPolicy: Always
        resources: 
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: LivenessStatus
              value: OK
          initialDelaySeconds: 10
          periodSeconds: 3  
          timeoutSeconds: 2  
          failureThreshold: 5     
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: ReadinessStatus
              value: OK
          initialDelaySeconds: 15
          periodSeconds: 2         
          timeoutSeconds: 2  
          failureThreshold: 5     
      imagePullSecrets:
      - name: dkr.simonettidti
